Se creó con Colab

--- a/Python_Data_Science.ipynb
+++ b/Python_Data_Science.ipynb
@@ -259,25 +259,41 @@
     {
       "cell_type": "code",
       "source": [
-        "nombre = 'Penélope Camacho'\n",
-        "edad = 11\n",
-        "promedio = 9.75\n",
+        "nombre_estudiante = 'Penélope Camacho'\n",
+        "edad_estudiante = 11\n",
+        "promedio_estudiante = 9.75\n",
         "aprobado = True"
       ],
       "metadata": {
         "id": "FabQ7jQf_8Xt"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "print(nombre_estudiante, edad_estudiante, promedio_estudiante, aprobado)\n",
+        "print(type(nombre_estudiante), type(edad_estudiante), type(promedio_estudiante), type(aprobado))"
+      ],
       "metadata": {
-        "id": "IZLQnZUj_8bd"
+        "id": "IZLQnZUj_8bd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "28bf0030-a887-437e-c881-043bb8719415"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Penélope Camacho 11 9.75 True\n",
+            "<class 'str'> <class 'int'> <class 'float'> <class 'bool'>\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
