Se creó con Colab

--- a/Python_Data_Science.ipynb
+++ b/Python_Data_Science.ipynb
@@ -329,30 +329,123 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "c_vigilante = 5\n",
+        "s_vigilante = 300\n",
+        "c_docente = 16\n",
+        "s_docente = 500\n",
+        "c_coordinador = 2\n",
+        "s_coordinador = 600"
+      ],
       "metadata": {
         "id": "F_X-wxdm_5Ys"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "total_empleados = c_vigilante + c_docente + c_coordinador\n",
+        "total_empleados"
+      ],
       "metadata": {
-        "id": "gKmBbhII_5b9"
+        "id": "gKmBbhII_5b9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "42f147eb-d05b-41f0-d56d-5a1f4dcd7681"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "23"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "diferencia_salario = s_coordinador - s_vigilante\n",
+        "diferencia_salario"
+      ],
       "metadata": {
-        "id": "fIugsxNy_53j"
+        "id": "fIugsxNy_53j",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ef072506-9d7f-4d58-ca89-be60380deb05"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "300"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "promedio_salarios = (s_vigilante * c_vigilante + s_docente * c_docente + s_coordinador * c_coordinador) / total_empleados\n",
+        "promedio_salarios"
+      ],
+      "metadata": {
+        "id": "ukThS4lZFBe2",
+        "outputId": "86170c53-38b2-4570-ba6c-769491ae1c1b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "465.2173913043478"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(type(promedio_salarios))"
+      ],
+      "metadata": {
+        "id": "5JfwlKqwFern",
+        "outputId": "68437af3-dba1-4152-aa88-37703060ffcd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'float'>\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
