Se creó con Colab

--- a/Python_Data_Science.ipynb
+++ b/Python_Data_Science.ipynb
@@ -404,11 +404,11 @@
         "promedio_salarios"
       ],
       "metadata": {
-        "id": "ukThS4lZFBe2",
-        "outputId": "86170c53-38b2-4570-ba6c-769491ae1c1b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ukThS4lZFBe2",
+        "outputId": "86170c53-38b2-4570-ba6c-769491ae1c1b"
       },
       "execution_count": 12,
       "outputs": [
@@ -430,11 +430,11 @@
         "print(type(promedio_salarios))"
       ],
       "metadata": {
-        "id": "5JfwlKqwFern",
-        "outputId": "68437af3-dba1-4152-aa88-37703060ffcd",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "5JfwlKqwFern",
+        "outputId": "68437af3-dba1-4152-aa88-37703060ffcd"
       },
       "execution_count": 13,
       "outputs": [
@@ -469,12 +469,30 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "t = 'Alura'\n",
+        "type(t)"
+      ],
       "metadata": {
-        "id": "ityEWqvh_2wK"
+        "id": "ityEWqvh_2wK",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "cc53c8fc-7d87-4cd4-cf47-d5a905d1719e"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "str"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -506,13 +524,29 @@
     {
       "cell_type": "code",
       "source": [
-        "texto = '  Micaela de los Sanyos '"
+        "texto = '  Micaela de los Sanyos '\n",
+        "id(texto)"
       ],
       "metadata": {
-        "id": "icDWtYTjBO0n"
+        "id": "icDWtYTjBO0n",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c4fd4a0a-181f-459a-c68e-a16fe1e639f0"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "137588855099424"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -539,12 +573,33 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "texto.upper()"
+      ],
       "metadata": {
-        "id": "wMVshJrY_ZXh"
+        "id": "wMVshJrY_ZXh",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "08b13366-61f3-4b64-cc75-1c20d8ff8ab0"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'  MICAELA DE LOS SANYOS '"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -558,12 +613,33 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "texto.lower()"
+      ],
       "metadata": {
-        "id": "px3yEeNH_YK4"
+        "id": "px3yEeNH_YK4",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "a5837421-5569-4b61-fb3d-537f97da6f80"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'  micaela de los sanyos '"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -577,12 +653,33 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "texto.strip()"
+      ],
       "metadata": {
-        "id": "76dLgNa4_XAe"
+        "id": "76dLgNa4_XAe",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "eefc570c-3e05-430c-b358-35d10bacc84c"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Micaela de los Sanyos'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 19
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -597,12 +694,33 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "texto.replace('y', 't')"
+      ],
       "metadata": {
-        "id": "PNXAixtE_V6R"
+        "id": "PNXAixtE_V6R",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "8246e404-8213-4427-9d58-7765ec17bbed"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'  Micaela de los Santos '"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -619,12 +737,37 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "print(texto)\n",
+        "id(texto)"
+      ],
       "metadata": {
-        "id": "JjkBRklr_T5n"
+        "id": "6yL-vjSyKFKl",
+        "outputId": "f7d6e68e-dee9-45c9-e5b3-c0a323b5c477",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "  Micaela de los Sanyos \n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "137588855099424"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 22
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -637,12 +780,29 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "nuevo_texto = texto.strip().replace('y', 't').upper()\n",
+        "print(nuevo_texto)\n",
+        "print(id(texto), id(nuevo_texto))"
+      ],
       "metadata": {
-        "id": "ocPP-Jaj_SJI"
+        "id": "ocPP-Jaj_SJI",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "74c1f808-24b6-4c69-ccd5-a604f836f614"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "MICAELA DE LOS SANTOS\n",
+            "137588855099424 137588855275968\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
