Se creó con Colab

--- a/Python_Data_Science.ipynb
+++ b/Python_Data_Science.ipynb
@@ -742,11 +742,11 @@
         "id(texto)"
       ],
       "metadata": {
-        "id": "6yL-vjSyKFKl",
-        "outputId": "f7d6e68e-dee9-45c9-e5b3-c0a323b5c477",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "6yL-vjSyKFKl",
+        "outputId": "f7d6e68e-dee9-45c9-e5b3-c0a323b5c477"
       },
       "execution_count": 22,
       "outputs": [
@@ -828,18 +828,58 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "nombre = input('Escribe tu nombre: ')"
+      ],
       "metadata": {
-        "id": "zbH_9i3q_PdY"
+        "id": "zbH_9i3q_PdY",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8770d0d8-3286-4118-e043-2a8a4ee011d1"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 25,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Escribe tu nombre: Malu\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(nombre)"
+      ],
+      "metadata": {
+        "id": "JZy1Q9Tl_PgL",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7dbf01b7-d9df-4872-dfe2-09ca78bf18a4"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "str"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 26
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "JZy1Q9Tl_PgL"
+        "id": "d94Bv21iOuB3"
       },
       "execution_count": null,
       "outputs": []
@@ -871,30 +911,180 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "ano_admision = int(input('Escribe el año de tu admisión: '))"
+      ],
       "metadata": {
-        "id": "M2ueeH6l_NMe"
+        "id": "M2ueeH6l_NMe",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ab36d223-bf04-4821-d60a-da47893cbed9"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 32,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Escribe el año de tu admisión: 2023\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "type(ano_admision)"
+      ],
       "metadata": {
-        "id": "xfWwuViK_NUn"
+        "id": "xfWwuViK_NUn",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "60d421b7-03fb-4030-84aa-498513749b38"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "int"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 33
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "nota_admision = float(input('Escribe tu nota de admisión: '))"
+      ],
       "metadata": {
-        "id": "uFCHDyew_NZm"
+        "id": "3IT7SjfsPsIb",
+        "outputId": "660303a5-26e9-46d9-ae9d-611170759c4a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 35,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Escribe tu nota de admisión: 9.5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(nota_admision)"
+      ],
+      "metadata": {
+        "id": "lLR_1VtbP3zS",
+        "outputId": "e1261c64-d4d9-48c4-f9ed-806724a39049",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "float"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 36
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ano_salida = input('Escribe el año de tu salida: ')"
+      ],
+      "metadata": {
+        "id": "uFCHDyew_NZm",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7e51550d-0ee3-4801-bcc0-5d5059829ad6"
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Escribe el año de tu salida: 2024\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(ano_salida)"
+      ],
+      "metadata": {
+        "id": "sYEh-vF9PDEP",
+        "outputId": "be1ef665-fda9-45fc-a054-77fd6ed143a3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "str"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 30
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ano_admision+ano_salida"
+      ],
+      "metadata": {
+        "id": "keJjA5N9_K5i",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "57e9971f-10ea-4963-a889-989eaede42e5"
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'20232024'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 31
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -909,12 +1099,27 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "print(f'\\tEl año de admision fue: {ano_admision} \\n\\tLa nota de admision fue: {nota_admision}')"
+      ],
       "metadata": {
-        "id": "keJjA5N9_K5i"
+        "id": "nWLSqe3QSl91",
+        "outputId": "5bb6f313-6c26-4c7a-f0c4-b5196f6216aa",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\tEl año de admision fue: 2023 \n",
+            "\tLa nota de admision fue: 9.5\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -927,12 +1132,39 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Nota de aprobacion entre 7 y 10 == nota de aprobacion >=7\n",
+        "# Nota de reprobacion es menor a 7 == nota de aprobacion <7\n",
+        "\n",
+        "'''\n",
+        "Si la nota es mayor o igual a 7 entonces el estudiante aprueba\n",
+        "Si no, entonces el estudiante reprueba.\n",
+        "'''"
+      ],
       "metadata": {
-        "id": "pa4gLncu-mvU"
+        "id": "pa4gLncu-mvU",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 50
+        },
+        "outputId": "e3817478-629f-4ba4-e1f3-36236d3d123d"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'\\nSi la nota es mayor o igual a 7 entonces el estudiante aprueba\\nSi no, entonces el estudiante reprueba.\\n'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 40
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -973,11 +1205,15 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "if 2>7:\n",
+        "  print('La condicion es verdadera')\n",
+        "print('Fin de la consulta')"
+      ],
       "metadata": {
         "id": "S2S6XAFz-czM"
       },
-      "execution_count": null,
+      "execution_count": 43,
       "outputs": []
     },
     {
