Se creó con Colab

--- a/Python_Data_Science.ipynb
+++ b/Python_Data_Science.ipynb
@@ -964,11 +964,11 @@
         "nota_admision = float(input('Escribe tu nota de admisión: '))"
       ],
       "metadata": {
-        "id": "3IT7SjfsPsIb",
-        "outputId": "660303a5-26e9-46d9-ae9d-611170759c4a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "3IT7SjfsPsIb",
+        "outputId": "660303a5-26e9-46d9-ae9d-611170759c4a"
       },
       "execution_count": 35,
       "outputs": [
@@ -987,11 +987,11 @@
         "type(nota_admision)"
       ],
       "metadata": {
-        "id": "lLR_1VtbP3zS",
-        "outputId": "e1261c64-d4d9-48c4-f9ed-806724a39049",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "lLR_1VtbP3zS",
+        "outputId": "e1261c64-d4d9-48c4-f9ed-806724a39049"
       },
       "execution_count": 36,
       "outputs": [
@@ -1036,11 +1036,11 @@
         "type(ano_salida)"
       ],
       "metadata": {
-        "id": "sYEh-vF9PDEP",
-        "outputId": "be1ef665-fda9-45fc-a054-77fd6ed143a3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "sYEh-vF9PDEP",
+        "outputId": "be1ef665-fda9-45fc-a054-77fd6ed143a3"
       },
       "execution_count": 30,
       "outputs": [
@@ -1103,11 +1103,11 @@
         "print(f'\\tEl año de admision fue: {ano_admision} \\n\\tLa nota de admision fue: {nota_admision}')"
       ],
       "metadata": {
-        "id": "nWLSqe3QSl91",
-        "outputId": "5bb6f313-6c26-4c7a-f0c4-b5196f6216aa",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "nWLSqe3QSl91",
+        "outputId": "5bb6f313-6c26-4c7a-f0c4-b5196f6216aa"
       },
       "execution_count": 39,
       "outputs": [
@@ -1245,12 +1245,31 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "if 2>7:\n",
+        "  print('La condicion es verdadera')\n",
+        "else:\n",
+        "  print('La condicion es falsa')\n",
+        "print('Fin de la consulta')"
+      ],
       "metadata": {
-        "id": "ZTfNJd_f-aOq"
+        "id": "ZTfNJd_f-aOq",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2663ac20-be79-4db3-b302-a2690d054156"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "La condicion es falsa\n",
+            "Fin de la consulta\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1275,12 +1294,32 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "nota = float(input('Escribe tu nota: '))\n",
+        "\n",
+        "if nota >= 7 :\n",
+        "  print('Aprobado')\n",
+        "else:\n",
+        "  print('Reprobado')"
+      ],
       "metadata": {
-        "id": "UukCN4AQ-YYW"
+        "id": "UukCN4AQ-YYW",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "5b01dd44-a67c-4714-c7ac-ddc8b66333c0"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Escribe tu nota: 6\n",
+            "Reprobado\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1304,12 +1343,34 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "nota = float(input('Escribe tu nota: '))\n",
+        "\n",
+        "if nota >= 7 :\n",
+        "  print('Aprobado')\n",
+        "if 7 > nota >= 5:\n",
+        "  print('Recuperación')\n",
+        "if nota < 5:\n",
+        "  print('Reprobado')"
+      ],
       "metadata": {
-        "id": "G9cJ5O9--W52"
+        "id": "G9cJ5O9--W52",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9dd5e3a3-3498-4898-a87f-dffe6c9555e8"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Escribe tu nota: 4\n",
+            "Reprobado\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1333,7 +1394,16 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "nota = float(input('Escribe tu nota: '))\n",
+        "\n",
+        "if nota >= 7 :\n",
+        "  print('Aprobado')\n",
+        "if 7 > nota >= 5:\n",
+        "  print('Recuperación')\n",
+        "if nota < 5:\n",
+        "  print('Reprobado')"
+      ],
       "metadata": {
         "id": "C21JmOuK-VU8"
       },
@@ -1393,12 +1463,34 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "nota = float(input('Escribe tu nota: '))\n",
+        "\n",
+        "if nota >= 7 :\n",
+        "  print('Aprobado')\n",
+        "elif 7 > nota >= 5:\n",
+        "  print('Recuperación')\n",
+        "else:\n",
+        "  print('Reprobado')"
+      ],
       "metadata": {
-        "id": "QFamB78s-TW_"
+        "id": "QFamB78s-TW_",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "523a1b3b-0d20-4d4d-d235-3ad609dfa69f"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Escribe tu nota: 6.9\n",
+            "Recuperación\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1468,30 +1560,93 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "v = True\n",
+        "f = False\n"
+      ],
       "metadata": {
         "id": "DFKmpvmS-Pa6"
       },
-      "execution_count": null,
+      "execution_count": 51,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "if v and v:\n",
+        "  print('La condicion es verdadera')\n",
+        "else:\n",
+        "  print('La condicion es falsa')"
+      ],
       "metadata": {
-        "id": "W5BIrpOD-PeI"
+        "id": "W5BIrpOD-PeI",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "be33ea79-2ce0-48c7-f4db-ad2fa7c345f6"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "La condicion es verdadera\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "if v or v:\n",
+        "  print('La condicion es verdadera')\n",
+        "else:\n",
+        "  print('La condicion es falsa')"
+      ],
       "metadata": {
-        "id": "fpDhYxq4-PiM"
+        "id": "fpDhYxq4-PiM",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "bcfa0666-6cb4-4aac-ca04-bbc88fdf66d8"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "La condicion es verdadera\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "if not v:\n",
+        "  print('La condicion es verdadera')\n",
+        "else:\n",
+        "  print('La condicion es falsa')"
+      ],
+      "metadata": {
+        "id": "W5rO7-A9lId_",
+        "outputId": "8d5dc808-7c0d-486c-e5b9-c9e7450d1b41",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "La condicion es falsa\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1539,12 +1694,78 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "lista = 'Juan Pérez, María González, Pedro Rodríguez, Ana López, Carlos Martínez, Laura Sánchez, José García, Elena Fernández, Luis Morales, Carmen Torres,David Ruiz, Isabel Ramírez, Javier Díaz, Sara Herrera, Miguel Castro,Patricia Ortega, Francisco Vargas, Marta Jiménez, Manuel Medina, Rosa Molina,Alejandro Silva, Silvia Ruiz, Andrés Torres, Natalia Soto, Diego Guerrero,Paula Ríos, Ricardo Navarro, Alicia Cordero, Carlos Vidal, Lorena Gómez'"
+      ],
       "metadata": {
-        "id": "gPPN9BCT-Mki"
+        "id": "efwzcaHsli54"
       },
-      "execution_count": null,
+      "execution_count": 60,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "nombre_1 = 'Miguel Castro'\n",
+        "nombre_2 = 'Marcelo Noguera'"
+      ],
+      "metadata": {
+        "id": "vqP2fnP5l4CF"
+      },
+      "execution_count": 61,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "if nombre_1 in lista:\n",
+        "  print('El estudiante aprobo')\n",
+        "else:\n",
+        "  print('El estudiante reprobo')"
+      ],
+      "metadata": {
+        "id": "gPPN9BCT-Mki",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "223f8ccf-6bcd-4640-c8b2-d9c60861a944"
+      },
+      "execution_count": 62,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "El estudiante aprobo\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "if nombre_2 in lista:\n",
+        "  print('El estudiante aprobo')\n",
+        "else:\n",
+        "  print('El estudiante reprobo')"
+      ],
+      "metadata": {
+        "id": "f166Cfkyl7Fp",
+        "outputId": "d3061679-3d6e-4420-af0a-8f88119c439b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "El estudiante reprobo\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
